# stey_compiler1

./: .gitignore  CMakeLists.txt  README.md  建木杯开发文档.md
.cache/clangd/index/: ASMInstruction.hpp.8FA870D9F7A72163.idx  BasicBlock.cpp.D25CAED8C9A9BCC8.idx  BasicBlock.hpp.DB5438EC0B70A9DC.idx  CodeGen.cpp.A0FDE02A24F11F16.idx  CodeGen.hpp.7F76141CAABEDBD0.idx  CodeGenUtil.hpp.80EC7F942B7A1471.idx  Constant.cpp.BA01319E1EE5E882.idx  Constant.hpp.CE2EE35F6F38EC24.idx  DeadCode.cpp.FD045D0C492A5386.idx  DeadCode.hpp.E966B7E3CB4DB35C.idx  Dominators.cpp.348AD6394509D05D.idx  Dominators.hpp.9EF1A6332999A774.idx  FuncInfo.cpp.8ADA882AFEB5D152.idx  FuncInfo.hpp.71FB37967C08B541.idx  Function.cpp.EA61A26B92F6E6F7.idx  Function.hpp.98026050D4A5BFC4.idx  GVN.cpp.46172D6BDDD9893E.idx  GlobalVariable.cpp.287E9A715B7DEA1E.idx  GlobalVariable.hpp.973EBFFB1A90A570.idx  IRBuilder.hpp.454DB970E6818170.idx  IRprinter.cpp.1330F1F0176560C5.idx  (+31 more)
include/SysY/: SysY_builder.hpp
include/cminusfc/: SysY_builder.hpp
include/common/: ast.hpp  syntax_tree.h
include/lightir/: IRBuilder.hpp  Instruction.hpp
include/passes/: Dominators.hpp  GVN.hpp  Mem2Reg.hpp
scripts/: test_ir.py
src/: CMakeLists.txt
src/SysY/: CMakeLists.txt  SysY.cpp  SysY_builder.cpp
src/cminusfc/: SysY_builder.cpp
src/common/: ast.cpp  syntax_tree.c
src/io/: CMakeLists.txt
src/lightir/: CMakeLists.txt  Constant.cpp
src/logging/: CMakeLists.txt  test_ast.cpp
src/parser/: lexical_analyzer.l  parser.c  syntax_analyzer.y
src/passes/: CMakeLists.txt  Dominators.cpp  GVN.cpp  Mem2Reg.cpp
